<resources>
    <string name="app_name">Password Generator</string>
    <string name="master_pw_hint">Master Password</string>
    <string name="confirm_master_pw_hint">Confirm new password</string>
    <string name="password_incorrect">Incorrect Password</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="password_length">Password length</string>
    <string name="password_version">Version</string>
    <string name="set_master_pw_title">Set master password</string>
    <string name="search_sites">Search sites</string>
    <string name="browse_sites">Browse</string>
    <string name="delete_sites">Delete</string>
    <string name="no_search_results">No sites found</string>
    <string name="site_name_field_hint">Site Name</string>
    <string name="uppercase_switch_label">Use Uppercase</string>
    <string name="numbers_switch_label">Use Numbers</string>
    <string name="symbols_switch_label">Use Symbols (long-press to edit)</string>
    <string name="requirements_edittext_label">Password requirements (regex, one per line)</string>
    <string name="edit_pw_symbols_title">Edit symbols</string>
    <string name="save_site_button_label">Save Site</string>
    <string name="copy_password_button_text">Copy</string>
    <string name="select_site_prompt">Select a site to generate password</string>
    <string name="master_pw_is_wrong">Master password is incorrect</string>
    <string name="bad_pw_spec">Bad password specification</string>
</resources>
